@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0
left to right direction

title User and Exception Class Diagram

class User {
  -{static} instance: User
  -name: String
  -number: int
  -email: String
  -skills: HashMap<String, Integer>
  +{static} getInstance(): User
  +{static} userInit(): void
  +{static} loadFrom(name: String, number: int, email: String): void
  +editField(field: String, value: String): void
  +getName(): String
  +getNumber(): Integer
  +getEmail(): String
  +getSkillsAsString(): String
}

class EditUserCommand {
  -field: String
  -ui: Ui
  +execute(list: RecordList): void
}

class GenerateCommand {
  -ui: Ui
  +execute(list: RecordList): void
}

class Storage {
  +saveToFile(list: RecordList): void
  +loadFromFile(filepath: String): RecordList
}

class Ui {
  +showMessage(message: String): void
  +readCommand(): String
}

class ResumakeException {
  +ResumakeException(message: String)
}

EditUserCommand ..> User
EditUserCommand ..> Ui
GenerateCommand ..> User
GenerateCommand ..> Ui
Storage ..> User : persist/load
EditUserCommand ..> ResumakeException : throws
Storage ..> ResumakeException : throws

@enduml
